2010-09-29  Sam Steingold  <sds@gnu.org>

	* makemake.in (lisp${SHREXT}, lisp${LEXE}): put ${GLLIB_A} before
	$(OBJECTS) so that gllib is rebuilt before compiling charstrg.d

2010-09-28  Sam Steingold  <sds@gnu.org>

	implement POSIX:GETDATE using gnulib
	* Makefile.devel (gnulib-imported): import getdate into syscalls
	(build-aux-update): get ylwrap from automake
	* modules/syscalls/calls.c (tm_to_lisp): extract from STRING-TIME
	(POSIX:GETDATE, xalloc_die): implement
	* modules/syscalls/posix.lisp: export GETDATE
	* modules/syscalls/configure.in: call gl_GETDATE & AC_PROG_YACC
	* modules/syscalls/gllib/c-ctype.c, modules/syscalls/gllib/c-ctype.h:
	* modules/syscalls/gllib/getdate.h, modules/syscalls/gllib/getdate.y:
	* modules/syscalls/gllib/gettext.h, modules/syscalls/gllib/gettime.c:
	* modules/syscalls/gllib/timespec.h, modules/syscalls/gllib/xalloc.h:
	* modules/syscalls/gllib/xmalloc.c, modules/syscalls/glm4/bison.m4:
	* modules/syscalls/glm4/clock_time.m4, modules/syscalls/glm4/error.m4:
	* modules/syscalls/glm4/getdate.m4, modules/syscalls/glm4/gettime.m4:
	* modules/syscalls/glm4/inline.m4, modules/syscalls/glm4/timespec.m4:
	* modules/syscalls/glm4/xalloc.m4: add

2010-09-28  Sam Steingold  <sds@gnu.org>

	fix bug#3076160: pass the top-level configure arguments --build= &
	--host= to the module configures
	* makemake.in (module_configure_flags):
	strip out -srcdir* & -cache-file*

2010-09-28  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c (module__rawsock__init_function_2):
	use _GL_UNUSED instead of the ad hoc `unused'

2010-09-28  Sam Steingold  <sds@gnu.org>

	* Makefile.devel ($(MAKEMAKE_TMP)): substitute
	--disable-option-checking for @module_configure_flags@
	* configure.in: substitute $ac_configure_args
	for @module_configure_flags
	* makemake.in (module_configure_flags): use @module_configure_flags@
	instead of hard-wired --disable-option-checking

2010-09-28  Sam Steingold  <sds@gnu.org>

	get strerror from gnulib for POSIX:STRERROR