@@ -5838,4 +5838,15 @@ void module__syscalls__init_function_2 (module_t* module) {
 #if defined(HAVE_FFI)
   init_stdio();
 #endif
+  /* if DATEMSK is not set, set it to the clisp-supplied value */
+  if (NULL == getenv("DATEMSK")) {
+    with_string_0(GLO(lib_dir), GLO(pathname_encoding), ldz, {
+        char datemsk[MAXPATHLEN];
+        strcpy(datemsk,ldz);
+        if (ldz[ldz_len-1] == '/')
+          strcat(datemsk,"syscalls/datemsk");
+        else strcat(datemsk,"/syscalls/datemsk");
+        setenv("DATEMSK",datemsk);
+      });
+  }
 }
