@@ -1,5 +1,14 @@
 2010-09-29  Sam Steingold  <sds@gnu.org>
 
+	* modules/syscalls/calls.c (module__syscalls__init_function_2): if
+	DATEMSK is not set, point it to the inluded file ...
+	* modules/syscalls/datemsk: add (based on
+	http://www.opengroup.org/onlinepubs/009695399/functions/getdate.html)
+	* modules/syscalls/Makefile.in (GENERATED): add datemsk
+	(datemsk): new target
+
+2010-09-29  Sam Steingold  <sds@gnu.org>
+
 	* makemake.in (lisp${SHREXT}, lisp${LEXE}): put ${GLLIB_A} before
 	$(OBJECTS) so that gllib is rebuilt before compiling charstrg.d
 
